# NVsolver

./: .gitignore  CMakeLists.txt  plot_vectorfield.py  video_vectorfield.py
data/: driven_cavity  parameter_file  plot_vectorfield.py  test_parameter_file
presentation/: edv_pakete.tex  presentation.tex
src/: Creator  EditFlags  FlagCreator.c  FlagCreator.h  IO.c  IO.h  Makefile  blas.c  blas.h  boundary.c  boundary.h  fields.c  fields.h  geometry.c  geometry.h  main.c  parallel.c  parallel.h  particle.c  particle.h  poisson.c  poisson.h  readme.txt  real.h  setup.c  setup.h  simulation.c  simulation.h  types.h  velocities.c  velocities.h
tests/: CMakeLists.txt  auxiliary.c  blatt1_tests.cpp  blatt2_tests.cpp  blatt3_tests.cpp  blatt4_tests.cpp  cleanupTest.cpp  computationTest.cpp  derivative_du2dx.c  derivative_duvdx.c  derivative_duvdy.c  derivative_dv2dy.c  poisson.c  setupTest.cpp  simTest.cpp  sim_creation.c  sim_from_file.c  simulationTest.cpp
